--- a/game-single.html
+++ b/game-single.html
@@ -62,7 +62,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="games.html">Games</a>
 							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
+								<li><a href="game-single.html">FiveM</a></li>
 							</ul>
 						</li>
 						<li><a href="review.html">Reviews</a></li>
@@ -195,7 +195,7 @@
 				<a href="#"><i class="fa fa-dribbble"></i></a>
 				<a href="#"><i class="fa fa-behance"></i></a>
 			</div>
-			<div class="copyright"><a href="">Colorlib</a> 2018 @ All rights reserved</div>
+			<div class="copyright"><a href="">Woke</a> 2020 @ All rights reserved</div>
 		</div>
 	</footer>
 	<!-- Footer section end -->
