--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="games.html">Games</a>
 							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
+								<li><a href="game-single.html">FiveM</a></li>
 							</ul>
 						</li>
 						<li><a href="review.html">Reviews</a></li>
