--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="games.html">Games</a>
 							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
+								<li><a href="game-single.html">FiveM</a></li>
 							</ul>
 						</li>
 						<li><a href="review.html">Reviews</a></li>
@@ -81,14 +81,14 @@
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-1.jpg">
 				<div class="container">
-					<h2>Game on!</h2>
-					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
+					<h2>FiveM Woke Rp!</h2>
+					<p>The best game you have been waiting for is out now!</p>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
-					<h2>Game on!</h2>
+					<h2>!</h2>
 					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
