--- a/review.html
+++ b/review.html
@@ -63,6 +63,7 @@
 						<li><a href="games.html">Games</a>
 							<ul class="sub-menu">
 								<li><a href="game-single.html">FiveM</a></li>
+								<li><a href="game-single.html">RedM</a></li>
 							</ul>
 						</li>
 						<li><a href="review.html">Reviews</a></li>
