--- a/game-single.html
+++ b/game-single.html
@@ -99,6 +99,19 @@
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">11.11.18  /  in <a href="">Games</a></div>
 					<h2 class="gs-title">Final Appocalipse 2.1</h2>
+					
+					<iframe src="http://player.twitch.tv/?channel=hasanabi" allowfullscreen height="auto" width="auto" *class="col-md-12">
+					</iframe>
+
+					<iframe frameborder="0" 
+					scrolling="no" 
+					id="chat_embed" 
+					src="http://www.twitch.tv/hasanabi/chat" 
+					height="auto" 
+					width="auto">
+					</iframe>
+
+
 					<h4>Gameplay</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus.</p>
 					<h4>Conclusion</h4>
