--- a/game-single.html
+++ b/game-single.html
@@ -99,14 +99,14 @@
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">11.11.18  /  in <a href="">Games</a></div>
 					<h2 class="gs-title">Final Appocalipse 2.1</h2>
-					
-					<iframe src="http://player.twitch.tv/?channel=hasanabi" allowfullscreen height="auto" width="auto" *class="col-md-12">
+
+					<iframe src="https://player.twitch.tv/?channel=hasanabi" allowfullscreen height="auto" width="auto" *class="col-md-12">
 					</iframe>
 
 					<iframe frameborder="0" 
 					scrolling="no" 
 					id="chat_embed" 
-					src="http://www.twitch.tv/hasanabi/chat" 
+					src="https://www.twitch.tv/hasanabi/chat" 
 					height="auto" 
 					width="auto">
 					</iframe>
