--- a/game-single.html
+++ b/game-single.html
@@ -100,7 +100,13 @@
 					<div class="gs-meta">11.11.18  /  in <a href="">Games</a></div>
 					<h2 class="gs-title">Final Appocalipse 2.1</h2>
 
-					<iframe src="https://player.twitch.tv/?channel=hasanabi" allowfullscreen height="auto" width="auto" *class="col-md-12">
+					<iframe
+					src="https://player.twitch.tv/?channel=hasanabi&parent=woke.ninja&muted=true"
+					height="720"
+					width="1280"
+					frameborder="0"
+					scrolling="no"
+					allowfullscreen="true">
 					</iframe>
 
 					<iframe frameborder="0" 
