--- a/game-single.html
+++ b/game-single.html
@@ -109,13 +109,13 @@
 					allowfullscreen="true">
 					</iframe>
 
-					<iframe frameborder="0" 
-					scrolling="no" 
-					id="chat_embed" 
-					src="https://www.twitch.tv/hasanabi/chat" 
-					height="auto" 
-					width="auto">
-					</iframe>
+					<iframe
+					frameborder="0"
+					scrolling="no"
+					src="https://www.twitch.tv/embed/hasanabi/chat?parent=woke.ninja"
+					height="100%"
+					width="100%">
+				  </iframe>
 
 
 					<h4>Gameplay</h4>
