--- a/game-single.html
+++ b/game-single.html
@@ -132,7 +132,7 @@
 						<a href="#"><i class="fa fa-behance"></i></a>
 					</div>
 				</div>
-				<div class="col-xl-3 col-lg-4 col-md-5 sidebar game-page-sideber">
+				<!-- <div class="col-xl-3 col-lg-4 col-md-5 sidebar game-page-sideber">
 					<div id="stickySidebar">
 						<div class="widget-item">
 							<div class="rating-widget">
@@ -159,7 +159,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
