--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
+			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
+				<div class="container">
+					<h2>Minecraft!</h2>
+					<p>The best game you have been waiting for is out now!</p>
+					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+				</div>
+			</div>
+			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
+				<div class="container">
+					<h2>World of Warcraft!</h2>
+					<p>The best game you have been waiting for is out now!</p>
+					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Hero section end-->
@@ -102,6 +116,23 @@
 	<!-- Intro section -->
 	<section class="intro-section">
 		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="intro-text-box text-box text-white">
+						<img src="img/logos/gta_logo.png" alt="#"/>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="intro-text-box text-box text-white">
+						<img src="img/logos/rdr2_logo.png" alt="#"/>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="intro-text-box text-box text-white">
+						<img src="img/logos/minecraft_logo.png" alt="#"/>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
