--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/gta_logo.png" alt="#"/>
+						<img src="img/logos/wow_logo.png" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
