--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/rdr2_logo.png" alt="#"/>
+						<img src="img/logos/gmod_logo.png" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
