--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/minecraft_logo.png" alt="#"/>
+						<img src="img/logos/league_logo.png" alt="#"/>
 					</div>
 				</div>
 			</div>
