--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-1.jpg">
 				<div class="container">
-					<h2>FiveM!</h2>
-					<p>The best game you have been waiting for is out now!</p>
+					<h2>Welcome to Woke RP</h2>
+					<p>A fivem roleplaying experience.</p>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
-					<h2>RedM!</h2>
-					<p>The best game you have been waiting for is out now!</p>
+					<h2>Join us on Discord!</h2>
+					<p>Discord.gg/bVjspu6X9B</p>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
