--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
 					<h2>Join us on Discord!</h2>
-					<p>Discord.gg/bVjspu6X9B</p>
-					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+					<a href="#" class="site-btn">Discord.gg/bVjspu6X9B<img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
