--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
-					<h2>Minecraft!</h2>
-					<p>The best game you have been waiting for is out now!</p>
+					<h2>Server Status</h2>
+					<iframe src='https://api.trackyserver.com/widget/tracky?id=883669&lang_code=&map=1&version=1&votes=1&plist=1&connect=1&button_name=Connect&color1=ff8415&color2=333&color3=333&color4=fff&color5=fff&color6=8a8e94&color7=8a8e94&color8=8a8e94&color9=fff&title=Woke Roleplay' width='400' height='300' allowtransparency='true' frameborder='0'></iframe>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
