--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-1.jpg">
 				<div class="container">
 					<h2>Welcome to Woke RP</h2>
-					<p>A fivem roleplaying experience.</p>
+					<p>A grand theft auto 5 roleplaying experience.</p>
 					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
