--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
 					<h2>Join us on Discord!</h2>
-					<button onclick="location.href='Discord.gg/bVjspu6X9B'" type="button" class="site-btn"> Discord.gg/bVjspu6X9B <img src="img/icons/double-arrow.png" alt="#"/></button>
+					<button onclick="location.href='https://Discord.gg/bVjspu6X9B'" type="button" class="site-btn"> Discord.gg/bVjspu6X9B <img src="img/icons/double-arrow.png" alt="#"/></button>
 				</div>
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
