--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 			</div>
 			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="img/slider-bg-2.jpg">
 				<div class="container">
-					<h2>World of Warcraft!</h2>
-					<p>The best game you have been waiting for is out now!</p>
-					<a href="#" class="site-btn">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+					<h2>Join our server on Fivem</h2>
+					<p>Please follow the directions below to connect!</p>
+					<a href="#" class="site-btn">Directions  <img src="img/icons/double-arrow.png" alt="#"/></a>
 				</div>
 			</div>
 		</div>
