--- a/index.html
+++ b/index.html
@@ -117,34 +117,34 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/gta_logo.png" alt="#"/>
+						<img src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/rdr2_logo.png" alt="#"/>
+						<img src="img/woke/carhud.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/minecraft_logo.png" alt="#"/>
+						<img src="img/woke/casino.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/wow_logo.png" alt="#"/>
+						<img src="img/woke/wheel_spin.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/gmod_logo.png" alt="#"/>
+						<img src="img/woke/blackjack.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/logos/league_logo.png" alt="#"/>
+						<img src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
