--- a/index.html
+++ b/index.html
@@ -117,39 +117,76 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/lockpick.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/carhud.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/carhud.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/casino.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/casino.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/wheel_spin.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/wheel_spin.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/blackjack.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/blackjack.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img src="img/woke/lockpick.PNG" alt="#"/>
+						<img class="make_bigger" src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<style>
+	.active {
+		animation: make_bigger 1s ease;
+		width: 200px;
+		height: 201px;
+	}
+	@keyframes make_bigger {
+		from { width: 127px; height: 128px; }
+		to { width: 200px; height: 201px; }
+	}
+	.non_active {
+		animation: make_smaller 1s ease;
+		width: 127px;
+		height: 128px;
+	}
+	@keyframes make_smaller {
+		from { width: 200px; height: 201px; }
+		to { width: 127px; height: 128px; }
+	}
+	.container {
+		width: 200px;
+		height: 201px;
+	}
+	</style>
+	<script>
+		$('.make_bigger').click(function() {
+		$('.active').not(this).addClass('non_active');
+		$('.active').not(this).removeClass('active');
+		if ($(this).hasClass('active')) {
+			$(this).addClass('non_active');
+			$(this).removeClass('active');
+		} else {
+			$(this).removeClass('non_active');
+			$(this).addClass('active');
+			}
+		});
+	</script>
 	<!-- Intro section end -->
 
 
