--- a/index.html
+++ b/index.html
@@ -117,40 +117,41 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/lockpick.PNG" alt="#"/>
+						<img src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/carhud.PNG" alt="#"/>
+						<img src="img/woke/carhud.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/casino.PNG" alt="#"/>
+						<img src="img/woke/casino.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/wheel_spin.PNG" alt="#"/>
+						<img src="img/woke/wheel_spin.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/blackjack.PNG" alt="#"/>
+						<img src="img/woke/blackjack.PNG" alt="#"/>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<img class="make_bigger" src="img/woke/lockpick.PNG" alt="#"/>
+						<img src="img/woke/lockpick.PNG" alt="#"/>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<style>
+<!-- <style>
+		
 	.active {
 		animation: make_bigger 1s ease;
 		width: 200px;
@@ -186,7 +187,7 @@
 			$(this).addClass('active');
 			}
 		});
-	</script>
+	</script> -->
 	<!-- Intro section end -->
 
 
